[package]
name = "warp-test-2"
version = "0.1.0"
authors = ["maxluchs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.0"
tokio = { version = "1.2.0", features = ["full"]  }
eyre = "0.6.5"
diesel = { version = "1.4.5", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
postgres = "0.19.0"
r2d2 = "0.8.9"
async-graphql = "2.5.7"
async-graphql-warp = "2.5.7"